004_notify/build/log/idf_py_stdout_output_78218
[1/11] Performing build step for 'bootloader'
[1/1] cd /Users/wangjiaqi/Documents/Github/esp32p4-develop-board/004_notify/build/bootloader/esp-idf/esptool_py && /Users/wangjiaqi/.espressif/python_env/idf5.4_py3.13_env/bin/python /Users/wangjiaqi/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x2000 /Users/wangjiaqi/Documents/Github/esp32p4-develop-board/004_notify/build/bootloader/bootloader.bin
Bootloader binary size 0x5700 bytes. 0x900 bytes (9%) free.
[2/11] No install step for 'bootloader'
[3/11] Completed 'bootloader'
[4/11] Building C object esp-idf/button/CMakeFiles/__idf_button.dir/btn_reg.c.obj
FAILED: esp-idf/button/CMakeFiles/__idf_button.dir/btn_reg.c.obj 
/Users/wangjiaqi/.espressif/tools/riscv32-esp-elf/esp-14.2.0_20241119/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.4.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/wangjiaqi/Documents/Github/esp32p4-develop-board/004_notify/build/config -I/Users/wangjiaqi/Documents/Github/esp32p4-develop-board/004_notify/components/button/include -I/Users/wangjiaqi/esp/esp-idf/components/newlib/platform_include -I/Users/wangjiaqi/esp/esp-idf/components/freertos/config/include -I/Users/wangjiaqi/esp/esp-idf/components/freertos/config/include/freertos -I/Users/wangjiaqi/esp/esp-idf/components/freertos/config/riscv/include -I/Users/wangjiaqi/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/wangjiaqi/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/Users/wangjiaqi/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/Users/wangjiaqi/esp/esp-idf/components/freertos/esp_additions/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_hw_support/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/wangjiaqi/esp/esp-idf/components/esp_hw_support/include/soc/esp32p4 -I/Users/wangjiaqi/esp/esp-idf/components/esp_hw_support/dma/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_hw_support/ldo/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_hw_support/port/esp32p4/. -I/Users/wangjiaqi/esp/esp-idf/components/esp_hw_support/port/esp32p4/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_hw_support/port/esp32p4/private_include -I/Users/wangjiaqi/esp/esp-idf/components/heap/include -I/Users/wangjiaqi/esp/esp-idf/components/heap/tlsf -I/Users/wangjiaqi/esp/esp-idf/components/log/include -I/Users/wangjiaqi/esp/esp-idf/components/soc/include -I/Users/wangjiaqi/esp/esp-idf/components/soc/esp32p4 -I/Users/wangjiaqi/esp/esp-idf/components/soc/esp32p4/include -I/Users/wangjiaqi/esp/esp-idf/components/soc/esp32p4/register -I/Users/wangjiaqi/esp/esp-idf/components/hal/platform_port/include -I/Users/wangjiaqi/esp/esp-idf/components/hal/esp32p4/include -I/Users/wangjiaqi/esp/esp-idf/components/hal/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_rom/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_rom/esp32p4/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_rom/esp32p4/include/esp32p4 -I/Users/wangjiaqi/esp/esp-idf/components/esp_rom/esp32p4 -I/Users/wangjiaqi/esp/esp-idf/components/esp_common/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_system/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_system/port/soc -I/Users/wangjiaqi/esp/esp-idf/components/esp_system/port/include/riscv -I/Users/wangjiaqi/esp/esp-idf/components/esp_system/port/include/private -I/Users/wangjiaqi/esp/esp-idf/components/riscv/include -I/Users/wangjiaqi/esp/esp-idf/components/lwip/include -I/Users/wangjiaqi/esp/esp-idf/components/lwip/include/apps -I/Users/wangjiaqi/esp/esp-idf/components/lwip/include/apps/sntp -I/Users/wangjiaqi/esp/esp-idf/components/lwip/lwip/src/include -I/Users/wangjiaqi/esp/esp-idf/components/lwip/port/include -I/Users/wangjiaqi/esp/esp-idf/components/lwip/port/freertos/include -I/Users/wangjiaqi/esp/esp-idf/components/lwip/port/esp32xx/include -I/Users/wangjiaqi/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/wangjiaqi/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/Users/wangjiaqi/esp/esp-idf/components/driver/deprecated -I/Users/wangjiaqi/esp/esp-idf/components/driver/i2c/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/touch_sensor/include -I/Users/wangjiaqi/esp/esp-idf/components/driver/twai/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_pm/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_ringbuf/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_gpio/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_pcnt/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_gptimer/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_spi/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_mcpwm/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_i2s/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_sdmmc/include -I/Users/wangjiaqi/esp/esp-idf/components/sdmmc/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_sdspi/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_sdio/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_dac/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_rmt/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_tsens/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_sdm/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_i2c/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_uart/include -I/Users/wangjiaqi/esp/esp-idf/components/vfs/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_ledc/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_parlio/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/Users/wangjiaqi/esp/esp-idf/components/esp_timer/include -I/Users/wangjiaqi/Documents/Github/esp32p4-develop-board/004_notify/components/led/include -march=rv32imafc_zicsr_zifencei_xesppie -mabi=ilp32f  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/wangjiaqi/Documents/Github/esp32p4-develop-board/004_notify=. -fmacro-prefix-map=/Users/wangjiaqi/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/button/CMakeFiles/__idf_button.dir/btn_reg.c.obj -MF esp-idf/button/CMakeFiles/__idf_button.dir/btn_reg.c.obj.d -o esp-idf/button/CMakeFiles/__idf_button.dir/btn_reg.c.obj -c /Users/wangjiaqi/Documents/Github/esp32p4-develop-board/004_notify/components/button/btn_reg.c
/Users/wangjiaqi/Documents/Github/esp32p4-develop-board/004_notify/components/button/btn_reg.c: In function 'button_init':
/Users/wangjiaqi/Documents/Github/esp32p4-develop-board/004_notify/components/button/btn_reg.c:21:64: error: passing argument 6 of 'xTaskCreatePinnedToCore' from incompatible pointer type [-Wincompatible-pointer-types]
   21 |     xTaskCreatePinnedToCore(button_task, "btn", 4096, NULL, 5, &btn_handle, 1);
      |                                                                ^~~~~~~~~~~
      |                                                                |
      |                                                                void (**)(void *)
In file included from /Users/wangjiaqi/esp/esp-idf/components/freertos/esp_additions/include/freertos/idf_additions.h:20,
                 from /Users/wangjiaqi/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/FreeRTOS.h:1533,
                 from /Users/wangjiaqi/Documents/Github/esp32p4-develop-board/004_notify/components/button/include/button.h:7,
                 from /Users/wangjiaqi/Documents/Github/esp32p4-develop-board/004_notify/components/button/btn_reg.c:1:
/Users/wangjiaqi/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/task.h:387:73: note: expected 'struct tskTaskControlBlock ** const' but argument is of type 'void (**)(void *)'
  387 |                                                    TaskHandle_t * const pvCreatedTask,
      |                                                    ~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~
[5/11] Building C object esp-idf/button/CMakeFiles/__idf_button.dir/button.c.obj
ninja: build stopped: subcommand failed.
